--- a/front_ohako/src/components/styles/HomePage.css
+++ b/front_ohako/src/components/styles/HomePage.css
@@ -2,9 +2,22 @@
   width: 80%;
   margin: 0 auto;
   padding: 20px;
-  background-color: #1e1e1e;
+  background-color: rgba(30, 30, 30, 0.8); /* 透過を追加 */
   color: #fff;
   border-radius: 10px;
+  position: relative; /* 相対位置 */
+  z-index: 1; /* 前面に表示 */
+}
+
+#background-video {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+  z-index: -1; /* 背面に表示 */
 }
 
 #playlist-title {
@@ -46,9 +59,20 @@ td button {
   background-color: #ff0000;
   color: #fff;
   border: none;
-  padding: 5px 10px;
+  width: 30px; /* 固定幅を設定 */
+  height: 30px; /* 固定高さを設定 */
+  display: flex; /* フレックスボックスを使用 */
+  align-items: center; /* 垂直方向に中央寄せ */
+  justify-content: center; /* 水平方向に中央寄せ */
   border-radius: 5px;
   cursor: pointer;
+  padding: 0; /* パディングを削除 */
+}
+
+td button img {
+  width: 15px; /* 幅を調整 */
+  height: 15px; /* 高さを調整 */
+  margin-left: 8px; /* 右にずらす */
 }
 
 td button:hover {
