--- a/front_ohako/src/components/styles/SearchResultsPage.css
+++ b/front_ohako/src/components/styles/SearchResultsPage.css
@@ -1,10 +1,27 @@
 .search-results-page {
-  width: 100%;
+  width: 80%; /* 幅を80%に設定 */
   margin: 0 auto;
   padding: 20px;
   background-color: #1e1e1e;
   color: #fff;
   border-radius: 10px;
+  position: relative; /* 相対位置 */
+  z-index: 1; /* 前面に表示 */
+}
+
+#background-video {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+  z-index: -1; /* 背面に表示 */
+}
+
+.results {
+  margin-top: 20px;
 }
 
 table {
@@ -33,41 +50,42 @@ td div {
   vertical-align: top;
 }
 
-/* td button {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  padding: 5px 10px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-td button:hover {
-  background-color: #0056b3;
-} */
-
 .plus-button {
-  background-color: #49c93d;
+  background-color: #28a745; /* 緑色 */
   color: #fff;
   border: none;
-  padding: 5px 10px;
+  width: 30px; /* 固定幅を設定 */
+  height: 30px; /* 固定高さを設定 */
+  display: flex; /* フレックスボックスを使用 */
+  align-items: center; /* 垂直方向に中央寄せ */
+  justify-content: center; /* 水平方向に中央寄せ */
   border-radius: 5px;
   cursor: pointer;
+  padding: 0; /* パディングを削除 */
 }
 
 .minus-button {
-  background-color: #ff0000;
-  color: #fff;
+  background-color: #ff0000; /* 赤色 */
   border: none;
-  padding: 5px 10px;
+  width: 30px; /* 固定幅を設定 */
+  height: 30px; /* 固定高さを設定 */
+  display: flex; /* フレックスボックスを使用 */
+  align-items: center; /* 垂直方向に中央寄せ */
+  justify-content: center; /* 水平方向に中央寄せ */
   border-radius: 5px;
   cursor: pointer;
+  padding: 0; /* パディングを削除 */
+}
+
+.minus-button img {
+  width: 15px; /* 幅を調整 */
+  height: 15px; /* 高さを調整 */
 }
 
 .plus-button:hover {
-  background-color: #35a42b;
+  background-color: #218838; /* 緑色のホバー効果 */
 }
 
 .minus-button:hover {
-  background-color: #ff2222;
+  background-color: #ff2222; /* 赤色のホバー効果 */
 }
