--- a/front_ohako/src/components/styles/TopBar.css
+++ b/front_ohako/src/components/styles/TopBar.css
@@ -1,34 +1,34 @@
 .top-bar {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  justify-content: space-between;
   background-color: #333;
-  color: #fff;
+  padding: 10px 20px;
+  height: 60px; /* 高さを固定 */
 }
 
 .logo {
-  font-size: 24px;
-  font-weight: bold;
   cursor: pointer;
 }
 
 .ohako-logo {
-  width: 150px;
-  height: 50px;
-  cursor: pointer;
-  filter: invert(1); /* 画像の白黒を反転 */
+  height: 60px; /* 縦の長さを40pxに設定 */
+  width: auto; /* アスペクト比を維持する */
 }
 
 .search-container {
   position: relative;
+  width: 30%; /* 幅を30%に調整 */
+  margin-left: auto; /* 左側にマージンを追加 */
+  margin-right: 20px; /* 右側のマージンを追加 */
 }
 
-.search-container input {
+.search-input {
+  width: 100%;
   padding: 5px;
-  font-size: 16px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
+  border-radius: 5px;
+  border: none;
+  font-size: 14px;
 }
 
 .suggestions {
@@ -37,12 +37,10 @@
   left: 0;
   right: 0;
   background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  max-height: 200px;
-  overflow-y: auto;
-  z-index: 1000;
-  color: #000; /* 検索候補の文字色を黒に設定 */
+  color: #000;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  z-index: 10;
 }
 
 .suggestion-item {
@@ -54,12 +52,35 @@
   background-color: #f0f0f0;
 }
 
-.no-suggestions {
+.loading, .no-suggestions {
   padding: 10px;
-  color: #999;
+  text-align: center;
 }
 
-.loading {
-  padding: 10px;
-  color: #333;
+.user-profile {
+  margin-left: 20px;
+  cursor: pointer;
+}
+
+.profile-container {
+  display: flex;
+  align-items: center;
+}
+
+.profile-image-container {
+  width: 44px; /* 画像サイズ + 4px (2pxのボーダーが左右に追加される) */
+  height: 44px; /* 画像サイズ + 4px (2pxのボーダーが上下に追加される) */
+  padding: 2px; /* 白い円の幅 */
+  background-color: white; /* 白い円の背景色 */
+  border-radius: 50%; /* 円形にする */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.profile-image {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
 }
